--- a/resources.html
+++ b/resources.html
@@ -19,13 +19,14 @@
           <li><a href = "worldoftea.html">Home</a></li>
           <li><a href = "typesoftea.html">Types of Tea</a></li>
           <li><a href = "trivia.html">Trivia</a></li>
-          <li><a href = "resources.html">Resources</a></li>
+          <li id = "current"><a href = "resources.html">Resources</a></li>
         </ul>
       </nav>
+      <h1 id="homet">Links to Sustainable Sellers</h1>
      </header>
      <main id = "main">
-      <h2></h2>
       <p> </p>
+      <h2>Have questions? Contact us below:</h2>
       <div class="contact">
         <form action="action_page.php">
           <label for="subject">Subject</label>
