--- a/trivia.html
+++ b/trivia.html
@@ -18,7 +18,7 @@
         <ul id="links"> 
           <li><a href = "worldoftea.html">Home</a></li>
           <li><a href = "typesoftea.html">Types of Tea</a></li>
-          <li><a href = "trivia.html">Trivia</a></li>
+          <li id = "current"><a href = "trivia.html">Trivia</a></li>
           <li><a href = "resources.html">Resources</a></li>
         </ul>
       </nav>
