--- a/typesoftea.html
+++ b/typesoftea.html
@@ -18,22 +18,26 @@
             <img src = "images/logo.png"/> 
             <ul id = "links">
                 <li><a href = "worldoftea.html">Home</a></li>
-                <li><a href = "typesoftea.html">Types of Tea</a></li>
+                <li id = "current"><a href = "typesoftea.html">Types of Tea</a></li>
                 <li><a href = "trivia.html">Trivia</a></li>
                 <li><a href = "resources.html">Resources</a></li>
             </ul>
         </nav>
+        <h1 id="homet">Travel the Globe with Tea</h1>
     </header>
     <main id = "main">
-        <div class="row">
-            <div class="column">
-              <img src="">
-            </div>
-            <div class="column">
-              <img src="">
-            </div>
-            <div class="column">
-              <img src="">
+        <p>Select one of the locations below to find out what the most popular type of tea is and how you say "tea" in their language!</p>
+        <div class="nine">
+            <div>
+              <img src = "images/japan.jpg" alt = ""/>
+              <img src = "images/india.jpg" alt = ""/>
+              <img src = "images/russia.jpg" alt = ""/>
+              <img src = "images/argentina.jpg" alt = ""/>
+              <img src = "images/turkey.jpg" alt = ""/>
+              <img src = "images/morroco.jpg" alt = ""/>
+              <img src = "images/england.jpg" alt = ""/>
+              <img src = "images/iran.jpg" alt = ""/>
+              <img src = "images/china.jpg" alt = ""/>
             </div>
         </div>
     </main>
