--- a/worldoftea.html
+++ b/worldoftea.html
@@ -16,7 +16,7 @@
        <nav>
          <img src = "images/logo.png"/> 
         <ul id = "links"> 
-          <li><a href = "worldoftea.html">Home</a></li>
+          <li id = "current"><a href = "worldoftea.html">Home</a></li>
           <li><a href = "typesoftea.html">Types of Tea</a></li>
           <li><a href = "trivia.html">Trivia</a></li>
           <li><a href = "resources.html">Resources</a></li>
