--- a/trivia.html
+++ b/trivia.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/teacup-favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Trivia</title>
@@ -22,10 +23,14 @@
           <li><a href = "resources.html">Resources</a></li>
         </ul>
       </nav>
+      <div id = "paral">
+        <p>Are you a tea expert or newbie?</p>
+      </div>
      </header>
      <main id = "main">
-      <p> </p>
-      <p> </p> 
+      <div class = "quiz"> 
+        <p> </p> 
+      </div>
      </main>
 
      <footer> 
