--- a/typesoftea.html
+++ b/typesoftea.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
-	<!-- <link rel="icon" href="imgs/favicon.ico"> -->
+    <link rel="icon" href="images/teacup-favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Types of Tea</title>
@@ -29,15 +29,15 @@
         <p>Select one of the locations below to find out what the most popular type of tea is and how you say "tea" in their language!</p>
         <div class="nine">
             <div>
-              <img src = "images/japan.jpg" alt = ""/>
-              <img src = "images/india.jpg" alt = ""/>
-              <img src = "images/russia.jpg" alt = ""/>
-              <img src = "images/argentina.jpg" alt = ""/>
-              <img src = "images/turkey.jpg" alt = ""/>
-              <img src = "images/morroco.jpg" alt = ""/>
-              <img src = "images/england.jpg" alt = ""/>
-              <img src = "images/iran.jpg" alt = ""/>
-              <img src = "images/china.jpg" alt = ""/>
+              <img src = "images/japan.jpg" alt = "Night image of Kyoto, Japan with two geisha in the center"/>
+              <img src = "images/india.jpg" alt = "A bird's-eye-view of a teacup surrounded by many bowls filled with herbs"/>
+              <img src = "images/russia.jpg" alt = "A skyline of Moscow, Russia with a colorful church on the right with rounded roof"/>
+              <img src = "images/argentina.jpg" alt = "A bird's-eye-view of a gourd with a straw on the left and yellow leaves on the right"/>
+              <img src = "images/turkey.jpg" alt = "Night image of Istanbul, Turkey Hagia Sofia church"/>
+              <img src = "images/morroco.jpg" alt = "A tray with a silver teapot and two glass cups with a sign reading 'Morrocan tea glasses'"/>
+              <img src = "images/england.jpg" alt = "Night image of London bridge with river below two towers"/>
+              <img src = "images/iran.jpg" alt = "A golden tray has a ceramic pot in the middle surrounded by glass bowls holding nuts and sweets"/>
+              <img src = "images/china.jpg" alt = "A Chinese temple is pictured on a sunny day and red gates below the green, sloped roof"/>
             </div>
         </div>
     </main>
