--- a/worldoftea.html
+++ b/worldoftea.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">  
+    <link rel="icon" href="images/teacup-favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>World of Tea</title>
@@ -31,12 +32,12 @@
       colors, and strengths of tea. Discover the top teas in each country or try a quiz to test your tea knowledge! </p>
       <p id = "selection"> Select one of the cups below to visit other pages to view more resources and fun facts </p> 
       <div class = "homecups">
-        <img src = "images/japanese.png" alt = "a brown Japanese style teacup with no handles and green liquid inside"/>
-        <p id = "description">Green in Japan, red in Africa, and more</p>
-        <img src = "images/turkish.png" alt = "a glass Turkish style teacup with reddish liquid inside and a teaspoon"/> 
-        <p id = "description">How much do you really know about tea?</p>
-        <img src = "images/english.png" alt = "a British style teacup with a flower print, saucer, and handle"/>  
-        <p id = "description">Buy your own leaves or ask us questions</p>
+        <a href="typesoftea.html"><img src = "images/japanese.png" alt = "a brown Japanese style teacup with no handles and green liquid inside"/></a>
+          <div class = "subgr"><p>Green in Japan, red in Africa, and more</p></div>
+        <a href="trivia.html"><img src = "images/turkish.png" alt = "a glass Turkish style teacup with reddish liquid inside and a teaspoon"/></a> 
+          <div class = "subgr"><p>How much do you really know about tea?</p></div>
+        <a href="resources.html"><img src = "images/english.png" alt = "a British style teacup with a flower print, saucer, and handle"/></a>  
+          <div class = "subgr"> <p>Buy your own leaves or ask us questions</p></div>
       </div>
      </main>
 
