--- a/resources.html
+++ b/resources.html
@@ -23,10 +23,22 @@
           <li id = "current"><a href = "resources.html">Resources</a></li>
         </ul>
       </nav>
-      <h1 id="homet">Links to Sustainable Sellers</h1>
+      <h1 id="seller">Links to Sustainable Sellers</h1>
      </header>
      <main id = "main">
-      <p> </p>
+      <ul class = "Sellers">
+        <li><a href = "https://frasertea.com/collections/organic-herbal-tea">Fraser Tea (Michigan, United States)</a></li> 
+          <p>- organic/fair trade, unique handcrafted blends</p>
+        <li><a href = "https://www.arborteas.com/">Arbor Teas (Michigan, United States)</a></li>
+          <p>- organic/fair trade, Ann Arbor local business</p>
+        <li><a href = "https://www.pukkaherbs.com/us/en">Pukka Herbs (Bristol, England)</a></li>
+          <p>- organic/fair trade, biodegradable packaging</p>
+        <li><a href = "https://alayatea.co/">Alaya Tea (India)</a></li> 
+          <p>- small business, woman founded and owned</p>
+        <li><a href = "https://www.ustwotea.com/">Us Two Tea (Taiwan)</a></li>
+          <p>- whole leaf blends, directly sourced from small farmers</p>
+      </ul>
+      <img src = "images/field.jpg" alt = "A hilly green field of tea leaves" id = "field"/>
       <h2>Have questions? Contact us below:</h2>
       <div class="contact">
         <form action="action_page.php">
