--- a/trivia.html
+++ b/trivia.html
@@ -24,7 +24,7 @@
         </ul>
       </nav>
       <div id = "paral">
-        <p>Are you a tea expert or newbie?</p>
+        <h2>Are you a tea expert or newbie?</h2>
       </div>
      </header>
      <main id = "main">
