--- a/typesoftea.html
+++ b/typesoftea.html
@@ -29,7 +29,7 @@
         <p>Select one of the locations below to find out what the most popular type of tea is and how you say "tea" in their language!</p>
         <div class="nine">
             <div>
-              <img src = "images/japan.jpg" alt = "Night image of Kyoto, Japan with two geisha in the center"/>
+              <img src = "images/japan.jpg" alt = "Night image of Kyoto, Japan with two women in kimono in the center"/>
               <img src = "images/india.jpg" alt = "A bird's-eye-view of a teacup surrounded by many bowls filled with herbs"/>
               <img src = "images/russia.jpg" alt = "A skyline of Moscow, Russia with a colorful church on the right with rounded roof"/>
               <img src = "images/argentina.jpg" alt = "A bird's-eye-view of a gourd with a straw on the left and yellow leaves on the right"/>
