--- a/trivia.html
+++ b/trivia.html
@@ -25,11 +25,31 @@
       </nav>
       <div id = "paral">
         <h2>Are you a tea expert or newbie?</h2>
+        <p>Press the "?" button to see the answer to each question and test your knowledge</p>
       </div>
      </header>
      <main id = "main">
-      <div class = "quiz"> 
-        <p> </p> 
+      <div class = "quiz">
+        <div> 
+          <img src = "images/tea1.jpg" alt = "Night image of Kyoto, Japan with two women in kimono in the center"/> 
+          <p id = "question">What is the most expensive type of tea?</p>
+        </div> 
+        <div id = "ans"><p>Oolong. The priciest tea in the world can be found in China and often goes under the name of "Tieguanyin", selling at nearly $1,500 per pound!</p></div>
+        <div> 
+          <img src = "images/tea2.jpg" alt = "Night image of Kyoto, Japan with two women in kimono in the center"/>
+          <p id = "question">What plant do tea leaves come from?</p>
+        </div> 
+        <div id = "ans"><p>Camellia Sinensis. All teas come from the same plant besides herbal infusions.</p></div>
+        <div> 
+          <img src = "images/tea3.jpg" alt = "Night image of Kyoto, Japan with two women in kimono in the center"/> 
+          <p id ="question">Which tea is the most oxidized?</p>
+        </div> 
+        <div id = "ans"><p>Black tea has the longest oxidation period. White tea is the least.</p></div>
+        <div> 
+          <img src = "images/tea4.jpg" alt = "Night image of Kyoto, Japan with two women in kimono in the center"/> 
+          <p id = "question">What health benefits can tea have?</p>
+        </div> 
+        <div id = "ans"><p>Many! Tea is known to help with sleep and reduced inflamation, digestion, stress relief, and more.</p></div>
       </div>
      </main>
 
