--- a/typesoftea.html
+++ b/typesoftea.html
@@ -26,19 +26,17 @@
         <h1 id="homet">Travel the Globe with Tea</h1>
     </header>
     <main id = "main">
-        <p>Select one of the locations below to find out what the most popular type of tea is and how you say "tea" in their language!</p>
+        <p id = "info">Select one of the locations below to find out what the most popular type of tea is and how you say "tea" in their language!</p>
         <div class="nine">
-            <div>
-              <img src = "images/japan.jpg" alt = "Night image of Kyoto, Japan with two women in kimono in the center"/>
-              <img src = "images/india.jpg" alt = "A bird's-eye-view of a teacup surrounded by many bowls filled with herbs"/>
-              <img src = "images/russia.jpg" alt = "A skyline of Moscow, Russia with a colorful church on the right with rounded roof"/>
-              <img src = "images/argentina.jpg" alt = "A bird's-eye-view of a gourd with a straw on the left and yellow leaves on the right"/>
-              <img src = "images/turkey.jpg" alt = "Night image of Istanbul, Turkey Hagia Sofia church"/>
-              <img src = "images/morroco.jpg" alt = "A tray with a silver teapot and two glass cups with a sign reading 'Morrocan tea glasses'"/>
-              <img src = "images/england.jpg" alt = "Night image of London bridge with river below two towers"/>
-              <img src = "images/iran.jpg" alt = "A golden tray has a ceramic pot in the middle surrounded by glass bowls holding nuts and sweets"/>
-              <img src = "images/china.jpg" alt = "A Chinese temple is pictured on a sunny day and red gates below the green, sloped roof"/>
-            </div>
+            <div><img src = "images/japan.jpg" alt = "Night image of Kyoto, Japan with two women in kimono in the center"/></div>  
+            <div><img src = "images/india.jpg" alt = "A bird's-eye-view of a teacup surrounded by many bowls filled with herbs"/></div>  
+            <div><img src = "images/russia.jpg" alt = "A skyline of Moscow, Russia with a colorful church on the right with rounded roof"/></div>  
+            <div><img src = "images/argentina.jpg" alt = "A bird's-eye-view of a gourd with a straw on the left and yellow leaves on the right"/></div>  
+            <div><img src = "images/turkey.jpg" alt = "Night image of Istanbul, Turkey Hagia Sofia church"/></div>  
+            <div><img src = "images/morroco.jpg" alt = "A tray with a silver teapot and two glass cups with a sign reading 'Morrocan tea glasses'"/></div>  
+            <div><img src = "images/england.jpg" alt = "Night image of London bridge with river below two towers"/></div>  
+            <div><img src = "images/iran.jpg" alt = "A golden tray has a ceramic pot in the middle surrounded by glass bowls holding nuts and sweets"/></div>  
+            <div><img src = "images/china.jpg" alt = "A Chinese temple is pictured on a sunny day and red gates below the green, sloped roof"/></div>  
         </div>
     </main>
     <footer> 
