--- a/resources.html
+++ b/resources.html
@@ -15,7 +15,7 @@
     <a class = "skip" href="#main">Skip to Main Content</a>
      <header>
        <nav>
-        <img src = "images/logo.png"/> 
+        <img src = "images/logo.png" alt = "logo with green background that says world of tea with smaller Japanese characters under"/> 
         <ul id="links"> 
           <li><a href = "worldoftea.html">Home</a></li>
           <li><a href = "typesoftea.html">Types of Tea</a></li>
@@ -27,16 +27,16 @@
      </header>
      <main id = "main">
       <ul class = "Sellers">
-        <li><a href = "https://frasertea.com/collections/organic-herbal-tea">Fraser Tea (Michigan, United States)</a></li> 
-          <p>- organic/fair trade, unique handcrafted blends</p>
-        <li><a href = "https://www.arborteas.com/">Arbor Teas (Michigan, United States)</a></li>
-          <p>- organic/fair trade, Ann Arbor local business</p>
-        <li><a href = "https://www.pukkaherbs.com/us/en">Pukka Herbs (Bristol, England)</a></li>
-          <p>- organic/fair trade, biodegradable packaging</p>
-        <li><a href = "https://alayatea.co/">Alaya Tea (India)</a></li> 
-          <p>- small business, woman founded and owned</p>
-        <li><a href = "https://www.ustwotea.com/">Us Two Tea (Taiwan)</a></li>
-          <p>- whole leaf blends, directly sourced from small farmers</p>
+        <li id = "l1"><a href = "https://frasertea.com/collections/organic-herbal-tea">Fraser Tea (Michigan, United States)</a></li> 
+          <li>- organic/fair trade, unique handcrafted blends</li>
+        <li id = "l2"><a href = "https://www.arborteas.com/">Arbor Teas (Michigan, United States)</a></li>
+          <li>- organic/fair trade, Ann Arbor local business</li>
+        <li id = "l3"><a href = "https://www.pukkaherbs.com/us/en">Pukka Herbs (Bristol, England)</a></li>
+          <li>- organic/fair trade, biodegradable packaging</li>
+        <li id = "l4"><a href = "https://alayatea.co/">Alaya Tea (India)</a></li> 
+          <li>- small business, woman founded and owned</li>
+        <li id = "l5"><a href = "https://www.ustwotea.com/">Us Two Tea (Taiwan)</a></li>
+          <li>- whole leaf blends, directly sourced from small farmers</li>
       </ul>
       <img src = "images/field.jpg" alt = "A hilly green field of tea leaves" id = "field"/>
       <h2>Have questions? Contact us below:</h2>
