--- a/trivia.html
+++ b/trivia.html
@@ -15,7 +15,7 @@
      <header>
         <a class = "skip" href="#main">Skip to Main Content</a>
        <nav>
-        <img src = "images/logo.png"/> 
+        <img src = "images/logo.png" alt = "logo with green background that says world of tea with smaller Japanese characters under"/> 
         <ul id="links"> 
           <li><a href = "worldoftea.html">Home</a></li>
           <li><a href = "typesoftea.html">Types of Tea</a></li>
@@ -24,7 +24,7 @@
         </ul>
       </nav>
       <div id = "paral">
-        <h2>Are you a tea expert or newbie?</h2>
+        <h1>Are you a tea expert or newbie?</h1>
         <p>Press the "?" button to see the answer to each question and test your knowledge</p>
       </div>
      </header>
@@ -53,9 +53,6 @@
       </div>
      </main>
 
-     <footer> 
-       <p> </p>
-     </footer>
      <footer> 
         <p> Designed by Alexandra Ioana Maxim © 2021 </p>
       </footer>
