--- a/typesoftea.html
+++ b/typesoftea.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <header> 
-        <a class = "skip" href="#main">Skip to Main Content</a>
+        <a class = "skip" href="#main">Skip to Main Content </a>
         <nav> 
-            <img src = "images/logo.png"/> 
+            <img src = "images/logo.png" alt = "logo with green background that says world of tea with smaller Japanese characters under"/> 
             <ul id = "links">
                 <li><a href = "worldoftea.html">Home</a></li>
                 <li id = "current"><a href = "typesoftea.html">Types of Tea</a></li>
