--- a/worldoftea.html
+++ b/worldoftea.html
@@ -15,7 +15,7 @@
     <a class = "skip" href="#main">Skip to Main Content</a>
      <header>
        <nav>
-         <img src = "images/logo.png"/> 
+         <img src = "images/logo.png" alt = "logo with green background that says world of tea with smaller Japanese characters under"/> 
         <ul id = "links"> 
           <li id = "current"><a href = "worldoftea.html">Home</a></li>
           <li><a href = "typesoftea.html">Types of Tea</a></li>
