--- a/typesoftea.html
+++ b/typesoftea.html
@@ -15,7 +15,7 @@
     <header> 
         <a class = "skip" href="#main">Skip to Main Content </a>
         <nav> 
-            <img src = "images/logo.png" alt = "logo with green background that says world of tea with smaller Japanese characters under"/> 
+            <img src = "images/logo.png" id = "logo" alt = "logo with green background that says world of tea with smaller Japanese characters under"/> 
             <ul id = "links">
                 <li><a href = "worldoftea.html">Home</a></li>
                 <li id = "current"><a href = "typesoftea.html">Types of Tea</a></li>
@@ -26,17 +26,36 @@
         <h1 id="homet">Travel the Globe with Tea</h1>
     </header>
     <main id = "main">
-        <p id = "info">Select one of the locations below to find out what the most popular type of tea is and how you say "tea" in their language!</p>
+        <p id = "info">Hover over or press on one of the locations below to find out what the most popular type of tea is and how you say "tea" in their language!</p>
         <div class="nine">
-            <div><img src = "images/japan.jpg" alt = "Night image of Kyoto, Japan with two women in kimono in the center"/></div>  
-            <div><img src = "images/india.jpg" alt = "A bird's-eye-view of a teacup surrounded by many bowls filled with herbs"/></div>  
-            <div><img src = "images/russia.jpg" alt = "A skyline of Moscow, Russia with a colorful church on the right with rounded roof"/></div>  
-            <div><img src = "images/argentina.jpg" alt = "A bird's-eye-view of a gourd with a straw on the left and yellow leaves on the right"/></div>  
-            <div><img src = "images/turkey.jpg" alt = "Night image of Istanbul, Turkey Hagia Sofia church"/></div>  
-            <div><img src = "images/morroco.jpg" alt = "A tray with a silver teapot and two glass cups with a sign reading 'Morrocan tea glasses'"/></div>  
-            <div><img src = "images/england.jpg" alt = "Night image of London bridge with river below two towers"/></div>  
-            <div><img src = "images/iran.jpg" alt = "A golden tray has a ceramic pot in the middle surrounded by glass bowls holding nuts and sweets"/></div>  
-            <div><img src = "images/china.jpg" alt = "A Chinese temple is pictured on a sunny day and red gates below the green, sloped roof"/></div>  
+            <!-- Credit: https://www.rawpixel.com/image/3343105/free-photo-image-japan-kyoto-temple -->
+            <div class = "flipper-card" tabindex="0">
+                <div class = "flipper-body"><div class = "flipper-front"><img src = "images/japan.jpg" alt = "Night image of Kyoto, Japan with two women in kimono in the center" class = "flipper-front"/></div> 
+            <div class = "flipper-back">Japan - お茶(ocha) - Sencha Green</div></div></div>
+            <!-- Credit: https://commons.wikimedia.org/wiki/File:Darjeeling,_India,_Darjeeling_tea_in_variety,_Black_tea.jpg -->
+            <div class = "flipper-card" tabindex="0"><div class = "flipper-body"> <div class = "flipper-front"><img src = "images/india.jpg" alt = "A bird's-eye-view of a teacup surrounded by many bowls filled with herbs" class = "flipper-front"/></div> 
+            <div class = "flipper-back">India - चाय(chaay) - Masala Chai</div></div></div> 
+            <!-- Credit: https://pixabay.com/photos/st-petersburg-peter-russia-3747214/ -->
+            <div class = "flipper-card" tabindex="0"><div class = "flipper-body"><div class = "flipper-front"><img src = "images/russia.jpg" alt = "A skyline of Moscow, Russia with a colorful church on the right with rounded roof" class = "flipper-front"/></div> 
+                <div class = "flipper-back">Russia - чай(chay) - "Russian Caravan" Black</div></div></div>
+             <!--Credit: https://www.foodnavigator-latam.com/Article/2019/02/19/Argentina-celebrates-historic-record-for-yerba-mate-sales-->
+            <div class = "flipper-card" tabindex="0"><div class = "flipper-body"><div class = "flipper-front"><img src = "images/argentina.jpg" alt = "A bird's-eye-view of a gourd with a straw on the left and yellow leaves on the right" class = "flipper-front"/></div> 
+                <div class = "flipper-back">Argentina - té - Yerba Mate</div></div></div>
+            <!-- Credit: https://www.maxpixel.net/Ayasofya-Sky-Minaret-Hagia-Sophia-Night-Blue-292530 -->
+            <div class = "flipper-card" tabindex="0"><div class = "flipper-body"><div class = "flipper-front"><img src = "images/turkey.jpg" alt = "Night image of Istanbul, Turkey Hagia Sofia church" class = "flipper-front"/></div> 
+                <div class = "flipper-back">Turkey - Çay - "Çaykur" Black</div></div></div>
+            <!-- Credit: https://www.flickr.com/photos/theenmoy/9213730634 -->
+            <div class = "flipper-card" tabindex="0"><div class = "flipper-body"><div class = "flipper-front"><img src = "images/morroco.jpg" alt = "A tray with a silver teapot and two glass cups with a sign reading 'Morrocan tea glasses" class = "flipper-front"/></div> 
+                <div class = "flipper-back">Moroco - شاي(shay) - Green Mint</div></div></div>
+             <!--Credit: https://commons.wikimedia.org/wiki/File:London_By_Night_(16232225626).jpg  -->
+            <div class = "flipper-card" tabindex="0"><div class = "flipper-body"><div class = "flipper-front"><img src = "images/england.jpg" alt = "Night image of London bridge with river below two towers" class = "flipper-front"/></div> 
+                <div class = "flipper-back">England - tea - Assam Black</div></div></div> 
+            <!-- Credit: https://www.flickr.com/photos/blondinrikard/14441775776 -->
+            <div class = "flipper-card" tabindex="0"><div class = "flipper-body"><div class = "flipper-front"><img src = "images/iran.jpg" alt = "A golden tray has a ceramic pot in the middle surrounded by glass bowls holding nuts and sweets" class = "flipper-front"/></div> 
+                <div class = "flipper-back">Iran - چای(chai) - Ceylon Black</div></div></div>
+              <!-- Credit: https://www.infoplease.com/world/countries/china -->
+            <div class = "flipper-card" tabindex="0"><div class = "flipper-body"><div class = "flipper-front"><img src = "images/china.jpg" alt = "A Chinese temple is pictured on a sunny day and red gates below the green, sloped roof" class = "flipper-front"/></div> 
+                <div class = "flipper-back">China - 茶(chá) - Oolong</div></div></div> 
         </div>
     </main>
     <footer> 
