--- a/worldoftea.html
+++ b/worldoftea.html
@@ -15,7 +15,7 @@
     <a class = "skip" href="#main">Skip to Main Content</a>
      <header>
        <nav>
-         <img src = "images/logo.png" alt = "logo with green background that says world of tea with smaller Japanese characters under"/> 
+         <img src = "images/logo.png" id = "logo" alt = "logo with green background that says world of tea with smaller Japanese characters under"/> 
         <ul id = "links"> 
           <li id = "current"><a href = "worldoftea.html">Home</a></li>
           <li><a href = "typesoftea.html">Types of Tea</a></li>
@@ -30,14 +30,24 @@
       Tea is the most consumed beverage in the world besides water and has a long history in many countries. While there are many ceremonies and 
       high quality sources, everyone can and should try having a cup or two in their own homes. You will be surprised by the wide range of flavors,
       colors, and strengths of tea. Discover the top teas in each country or try a quiz to test your tea knowledge! </p>
-      <p id = "selection"> Select one of the cups below to visit other pages to view more resources and fun facts </p> 
+
+      <p class = "bord" id = "selection"> Select one of the cups below to visit other pages to view more resources and fun facts </p> 
       <div class = "homecups">
+        <!-- Credit: https://www.wikiwand.com/en/Matcha -->
+        <div id = "cup1">
         <a href="typesoftea.html"><img src = "images/japanese.png" alt = "a brown Japanese style teacup with no handles and green liquid inside"/></a>
-          <div class = "subgr"><p>Green in Japan, red in Africa, and more</p></div>
+          <p> The most popular teas around the world</p>
+        </div>
+          <!-- Credit: https://commons.wikimedia.org/wiki/File:Glass_tea_cup.jpg -->
+          <div id = "cup2">
         <a href="trivia.html"><img src = "images/turkish.png" alt = "a glass Turkish style teacup with reddish liquid inside and a teaspoon"/></a> 
-          <div class = "subgr"><p>How much do you really know about tea?</p></div>
+          <p>How much do you really know about tea?</p>
+        </div>
+          <!-- Credit: https://pxhere.com/en/photo/1052192 -->
+          <div id = "cup3">
         <a href="resources.html"><img src = "images/english.png" alt = "a British style teacup with a flower print, saucer, and handle"/></a>  
-          <div class = "subgr"> <p>Buy your own leaves or ask us questions</p></div>
+          <p>Buy your own leaves or ask us questions</p>
+        </div>
       </div>
      </main>
 
