--- a/resources.html
+++ b/resources.html
@@ -9,6 +9,15 @@
     <link rel="icon" href="images/teacup-favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CLPEC74LK6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CLPEC74LK6');
+    </script>
     <title>Resources</title>
   </head>
   <body>
