--- a/trivia.html
+++ b/trivia.html
@@ -8,6 +8,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
     <link rel="icon" href="images/teacup-favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CLPEC74LK6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CLPEC74LK6');
+    </script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Trivia</title>
   </head>
